Corrected search box styling on iOS.

--- a/client/templates/retail/main.css
+++ b/client/templates/retail/main.css
@@ -100,6 +100,7 @@ form input {
   font-weight: lighter;
   color: var(--colorFgSecondary);
   background-color: rgba(255,255,255,.75);
+  border-radius: 0;
   border-right: none;
   border-left: solid black 1px;
   border-top: solid black 1px;
@@ -186,9 +187,4 @@ form button {
 
 .logo-inline {
   height: 1.25rem;
-}
-
-.rss-inline {
-  height: 1.25rem;
-  margin-right: .25rem;
 }
